<resources>
    <string name="app_name">Tutorial Espresso</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_invalid">Login invalid!</string>
    <string name="info">Info</string>
    <string name="title_activity_new_user">New user</string>
    <string name="email">e-mail</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_success">User successfully registered :)</string>
    <string name="register_fail">Failure to register user :(</string>
</resources>
