...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUser"
                android:hint="@string/user"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </android.support.design.widget.TextInputLayout>
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

...
